--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <br><br><br>
-    <h1>Quality In-Person Computer Supportttttttt</h1>
+    <h1>Quality In-Person Computer Support</h1>
     <br><br><br>
 
 <div id="divider" style="background-color: #D38631; height: 10px; border-radius: 5px; width:100%;">
