--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <div>
-    <img class="logo" style="float: left" src="Home IT Services-logos_white.png" alt="logo">
+    <img class="logo" style="float: left" src="pictures/Home IT Services-logos_white.png" alt="logo">
     <div id="divider" style="background-color: #D38631; height: 10px; border-radius: 5px; width:100%;"></div>
 
     <br>
@@ -26,7 +26,7 @@
 <div style="display:inline;text-align:left; float: left;" imageanchor= "1"> <h2><span style="color:#F7F3E8">Information</span></h2> <hr> <br> 
     <div style="display:inline;text-align:left;">
     <a href="https://www.google.com/maps/place/Casey,+VIC/@-38.0924413,145.1826582,11z/data=!3m1!4b1!4m5!3m4!1s0x6ad61aa57f368229:0xb27e63630df75495!8m2!3d-38.1105316!4d145.2922335" imageanchor="1">
-    <img src="location2.png" class="resize"alt="location"></a>
+    <img src="pictures/location2.png" class="resize"alt="location"></a>
 
 </div>
 
