--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <body>
 
 
-    <br><br>
+
     <h1>Quality In-Person Computer Support</h1>
+    <hr class="small-width">
+    <h1>Berwick</h1>
     <br><br><br><br>
 
 <div id="divider" style="background-color: #D38631; height: 10px; border-radius: 5px; width:100%;">
